# pythonforge

./: .gitignore  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.portfolio/: architecture.md  qa.md  stack.md
og-gen/: generate.mjs  og-home.html  package.json
src/pyhatch/: __init__.py  auditor.py  cli.py  generator.py  models.py  upgrader.py
src/pyhatch/templates/: Dockerfile.j2  LICENSE_APACHE2.j2  README.md.j2  __init__.py  devcontainer.json.j2  docker-compose.yml.j2  github_ci.yml.j2  gitignore.j2  mkdocs.yml.j2  package_init.py.j2  pre-commit-config.yaml.j2  pyproject.toml.j2  vscode_extensions.json.j2  vscode_settings.json.j2
src/quickforge/: __init__.py  auditor.py  cli.py  generator.py  models.py  upgrader.py
src/quickforge/templates/: Dockerfile.j2  LICENSE_BSD3.j2  LICENSE_MIT.j2  LICENSE_PROPRIETARY.j2  README.md.j2  __init__.py  cli.py.j2  devcontainer.json.j2  docker-compose.yml.j2  docs_index.md.j2  github_ci.yml.j2  gitignore.j2  main.py.j2  mkdocs.yml.j2  package_init.py.j2  pre-commit-config.yaml.j2  pyproject.toml.j2  test_main.py.j2  vscode_extensions.json.j2  vscode_settings.json.j2
tests/: __init__.py  conftest.py  test_add.py  test_auditor.py  test_cli.py  test_fixes.py  test_generator.py  test_models.py  test_upgrader.py
